--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --red: #FF0000;
-    --green: #ADC698;
+    --green: #688E26;
     --blue: #114B5F;
     --purple: #42033D;
     --dark: #1A090D;
@@ -67,7 +67,7 @@ h2 {
 
 .welcome::before {
     content: "";
-    background-image: url(../images/lanterns.jpeg);
+    background-image: url("../images/lanterns.jpeg");
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -117,6 +117,9 @@ h2 {
 .about-me {
     display: grid;
     grid-template-columns: [port-start] minmax(6em,1fr) [name-start] minmax(6em,1fr) [img-end] 2fr [port-end];
+    margin-top: 5em;
+    margin-left: 2em;
+    margin-bottom: 5em;
 }
 .about-img {
     max-width: 80%;
@@ -136,5 +139,46 @@ h2 {
     margin: .5em 0;
 }
 .portfolio-item img {
+    /* max-height: 20%; */
     width: 100vw;
 }
+
+.portfolio {
+    text-align: center;
+    background-color: lightgrey;
+    padding: 5em;
+}
+.portfolio-item {
+    position: relative;
+    overflow: hidden;
+}
+img {
+    display: block;
+}
+.portfolio-item figcaption {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    padding: 2em;
+    background: rgba(255,0,0,.75);
+    color: white;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    }
+
+.portfolio-title {
+    color:white;
+    font-size: 3.625rem;
+    margin-bottom: auto;
+}
+.portfolio-link {
+    color: white;
+    font-weight: 700;
+    font-size: 1.5rem;
+    text-decoration: none;
+    border-bottom: 3px solid white;
+    align-self: flex-start;
+} 
