--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,10 @@ h1, h2, p {
     margin-top: 0;
     margin-bottom: 1em;
 }
-
+.container {
+padding: 0px;
+margin:0px
+}
 
 h1 {
     color: var(--green);
@@ -117,9 +120,7 @@ h2 {
 .about-me {
     display: grid;
     grid-template-columns: [port-start] minmax(6em,1fr) [name-start] minmax(6em,1fr) [img-end] 2fr [port-end];
-    margin-top: 5em;
-    margin-left: 2em;
-    margin-bottom: 5em;
+    margin: 5em 4em 5em 4em;
 }
 .about-img {
     max-width: 80%;
@@ -141,20 +142,23 @@ h2 {
 .portfolio-item img {
     /* max-height: 20%; */
     width: 100vw;
+    /* height: auto; */
 }
 
 .portfolio {
     text-align: center;
     background-color: lightgrey;
-    padding: 1em;
-    padding-bottom: 2em;
+    display: flex;
+    flex-wrap: wrap;
 }
 .portfolio-item {
     position: relative;
     overflow: hidden;
+    flex: 1 1 10rem
     }
 img {
     display: block;
+    width: 100%;
     }
 .portfolio-item figcaption {
     position: absolute;
@@ -187,4 +191,44 @@ img {
     text-decoration: none;
     border-bottom: 3px solid white;
     align-self: flex-start;
-} 
+}
+
+.contact {
+    padding: 5em 0;
+    background-color: white;
+}
+.contact h1 {
+    text-align: center;
+}
+label {
+    display: block;
+    margin: 1em 5em 1em 1em;
+    color: var(--dark)
+}
+input,
+textarea {
+    box-sizing: border-box;
+    display: block;
+    padding: 1em;
+    width: 100%;
+    background: rgba(128,128,128,.10);
+    border: 1px solid lightgrey;
+    font-size: 1.2rem;
+}
+footer {
+    background-color: var(--dark);
+    padding: 5em 0;
+    text-align: center;
+    color: white;
+}
+.social-icons {
+    display: flex;
+    justify-content: center;
+    margin-top: 3em;
+    margin-bottom: 3em;
+    margin-left: 4em;
+}
+
+.social-icon {
+    width: 35%
+}
