--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,6 @@ h1, h2, p {
     margin-top: 0;
     margin-bottom: 1em;
 }
-.container {
-padding: 0px;
-margin:0px
-}
 
 h1 {
     color: var(--green);
@@ -92,7 +88,13 @@ h2 {
     color: white;
 }
 .intro h2 {
-    color: white;
+    color: var(--red);
+}
+@media (min-width: 1200px) {
+    .intro h2 {
+        font-size: 2.5rem;
+        color: var(--red);
+    }
 }
 .intro h2::after {
     content: "";
@@ -139,9 +141,10 @@ h2 {
 .about-subtitle {
     margin: .5em 0;
 }
+
 .portfolio-item img {
     /* max-height: 20%; */
-    width: 100vw;
+    /* width: 100vw; */
     /* height: auto; */
 }
 
@@ -150,11 +153,15 @@ h2 {
     background-color: lightgrey;
     display: flex;
     flex-wrap: wrap;
+    padding-top: 5em;
+}
+.portfolio h1 {
+    color: var(--dark);
 }
 .portfolio-item {
     position: relative;
     overflow: hidden;
-    flex: 1 1 10rem
+    flex: 1 1 10rem;
     }
 img {
     display: block;
@@ -222,13 +229,42 @@ footer {
     color: white;
 }
 .social-icons {
-    display: flex;
+    display: inline-flex;
+    flex-direction: row;
     justify-content: center;
+    align-content: space-between;
     margin-top: 3em;
     margin-bottom: 3em;
-    margin-left: 4em;
+    margin-left: 20%;
+    margin-right: auto;
 }
 
 .social-icon {
-    width: 35%
+    width: 35%;
+}
+@media (min-width: 800px) {
+    .social-icon {
+        width: 25%;
+    }
+}
+@media (min-width: 1200px) {
+    .social-icon {
+        width: 20%;
+    }
+}
+
+.resume {
+    color: white;
+    font-size: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding-bottom: 2em;
+    text-decoration: none;
+}
+
+@media (min-width: 1200px) {
+    .resume {
+        font-size: 1.5em;
+        /* color: var(--red); */
+    }
 }
