--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ h2 {
 }
 .intro h2 {
     color: var(--red);
+    font-size: 4rem;
 }
 @media (min-width: 1200px) {
     .intro h2 {
@@ -111,6 +112,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 2rem;
 }
 .intro-left img,
 .intro-right img {
@@ -137,9 +139,11 @@ h2 {
 .about-subtitle,
 .about-text {
     grid-column: port / port;
+    font-size: 2rem;
 }
 .about-subtitle {
     margin: .5em 0;
+    font-size: 3.5rem;
 }
 
 .portfolio-item img {
