--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,17 @@ img {
     border-bottom: 3px solid white;
     align-self: flex-start;
 }
+@media (min-width: 800px) {
+    .portfolio-title,
+    .portfolio-link {
+        font-size: 4rem;
+        }
+    }
+@media (min-width: 800px) {
+    .portfolio-desc {
+        font-size: 2.5rem;
+        }
+    }
 
 .contact {
     padding: 5em 0;
